[package]
authors = ["the rp-rs team"]
edition = "2018"
readme = "README.md"
name = "embassy-rp-st7789"
version = "0.1.0"
resolver = "2"

[lib]
crate-type = ["lib"]
doc = true
path = "src/lib.rs"

[dependencies]
cortex-m = "0.7.6"
embassy-embedded-hal = { version = "0.6.0",  features = ["defmt"] }
embassy-time = { version = "0.5.1",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }