[package]
authors = ["the rp-rs team"]
edition = "2018"
readme = "README.md"
name = "embassy-rp-st7789"
version = "0.1.0"
resolver = "2"

[lib]
crate-type = ["lib"]
doc = true
path = "src/lib.rs"



[dependencies]
cortex-m = "0.7.6"
embassy-embedded-hal = { version = "0.6.0"}
embassy-time = { version = "0.5.1"}
embassy-rp = { version = "0.10.0" }

[features]
rp2040      = ["embassy-rp/rp2040", "embassy-rp/time-driver", "embassy-rp/unstable-pac" ,"embassy-rp/critical-section-impl"]
rp235xa     = ["embassy-rp/rp235xa", "embassy-rp/time-driver", "embassy-rp/unstable-pac", "embassy-rp/critical-section-impl"]
keep_cs_low = []