[package]
authors = ["richar"]
edition = "2018"
name = "st7789-examples"
version = "0.1.0"
resolver = "2"

[dependencies]
#alloc-cortex-m = "*"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
embassy-embedded-hal = { version = "0.6.0",  features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0",  features = ["defmt", "time-driver", "rp235xa"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# We're using a Pico by default on this template
embassy-rp-st7789 = {version = "0.1.0", path = ".."}
# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
 